# robot-intro

./: .gitignore  LICENSE  README.md  log.html  output.xml  pyproject.toml  report.html
browser/: simple.robot
intro/: file-stuff.robot  first.robot
tests/: Reckonsys.py  bot-builder.robot  pipeline-automation.robot
tests/pages/: common.json
