[tool.poetry]
name = "robot-intro"
version = "0.1.0"
description = ""
authors = ["dhilipsiva <dhilipsiva@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
robotframework = "^4.1.2"
robotframework-seleniumlibrary = "^5.1.3"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
ipython = "^7.30.1"
flake8 = "^4.0.1"
pep8 = "^1.7.1"
ipdb = "^0.13.9"
black = "^21.12b0"
isort = "^5.10.1"
pip = "^21.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
